--- a/src/main/resources/APachas/src/app/components/users/detailUser/detailUser.component.css
+++ b/src/main/resources/APachas/src/app/components/users/detailUser/detailUser.component.css
@@ -27,11 +27,6 @@
     width: 100%;
 }
 
-.userDiv{
-    position: relative;
-}
-
-
 .col{
     text-align: center;
 }
@@ -139,7 +134,7 @@ ul.paginationUser li:last-child a
     outline: none;
     box-shadow: none;
     margin: 8px 0;
-    max-width: 160px;
+    max-width: 180px;
     background: #66bb6a;
     color: #fff;
     cursor: pointer;
@@ -149,12 +144,16 @@ ul.paginationUser li:last-child a
     transition: 0.5s;
 }
 
-div.paginationMutualDiv {
-    padding-top: 10px;
-    height: 145px;
-    overflow: scroll;
+.mutualBorder{
     border-left-style: solid;
     border-color:  #f5f5f5;
+}
+
+div.paginationMutualDiv {
+    padding-top: 10px;
+    height: 150px;
+    width: 110%;
+    overflow: scroll;
 }
 
 .paginationMutualDiv::-webkit-scrollbar{
@@ -187,7 +186,7 @@ div.paginationMutualDiv {
     width: 100%;
 }
 
-.imageGroup {
+.imageMutuals {
     width:100px;
     height:100px;
     border-radius:90px;
@@ -209,5 +208,10 @@ div.paginationMutualDiv {
     justify-content: center;
     align-items: end;
     padding-bottom: 20px;
+    font-weight: 600;
+    text-decoration: none;
+    color: #66bb6a;
+    text-transform: uppercase;
+    cursor:pointer;
 
 }
