--- a/src/main/resources/APachas/src/app/components/login/login.component.html
+++ b/src/main/resources/APachas/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
             <div class="imgBx"><img src="./assets/LoginMoney.jpg"></div>
             <div class="formBx">
                 <form (submit)="logIn()" ngNativeValidate #loginForm="ngForm">
-                    <h2>Iniciar sesión en <a href="/home">¡A pachas!</a></h2>
+                    <h2>Iniciar sesión en <a href="/home"><br>¡A pachas!</a></h2>
                     <div>
                         <input type="text" id="login_userLogin" name="userLogin" placeholder="Nombre de usuario"
                                pattern="[a-zA-ZñÑ0-9_-]{1,100}" title="Must be an alphanumeric"
