--- a/src/main/resources/APachas/src/styles.css
+++ b/src/main/resources/APachas/src/styles.css
@@ -63,10 +63,8 @@
      font-weight: 600;
 }
 
-/*fondo hover*/
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-optgroup.ng-option-selected:hover, .ng-dropdown-panel .ng-dropdown-panel-items .ng-optgroup.ng-option-selected.ng-option-marked:hover {
-     background-color: red !important;
-     /*background-color: rgba(102, 187, 106, 0.1) !important;*/
+     background-color: rgba(102, 187, 106, 0.1) !important;
      font-weight: 600;
 }
 
@@ -75,14 +73,18 @@
      font-weight: 500 !important;
 }
 
-
-
-/*.ng-dropdown-panel .ng-dropdown-panel-items .ng-optgroup.ng-option-selected, .ng-dropdown-panel .ng-dropdown-panel-items .ng-optgroup.ng-option-selected.ng-option-marked {
-     background-color: rgba(102, 187, 106, 0.1) !important;
-
-}*/
-
-/*.ng-dropdown-panel .ng-dropdown-panel-items .ng-optgroup.ng-option-selected, .ng-dropdown-panel .ng-dropdown-panel-items .ng-optgroup.ng-option-selected.ng-option-marked {
-     background-color: #ebf5ff !important;
-     font-weight: 600;
-}*/
+.ng-select .ng-select-container {
+     width: 100%;
+     outline: none;
+     box-shadow: none;
+     margin: 8px 0;
+     letter-spacing: 1px;
+     font-weight: 300;
+     color: #333;
+     padding-left: 10px;
+     background-color: #fff;
+     border-radius: 4px;
+     border: 1px solid #ccc;
+     min-height: 36px;
+     align-items: center;
+}
