--- a/src/main/resources/APachas/src/app/components/events/createEvent/createEvent.component.css
+++ b/src/main/resources/APachas/src/app/components/events/createEvent/createEvent.component.css
@@ -50,10 +50,23 @@
     filter:brightness(0.4);
 }
 
+.container-fluid{
+    padding-bottom: 20px;
+}
+
+.secondDiv{
+    margin-top: -20px;
+}
+
+.selectRow{
+padding-top: 10px;
+    padding-bottom: 15px;
+}
+
 .imageText{
     border: none;
     width: 50px;
-    height: 85px;
+    height: 100px;
     padding-right: 15px;
     background: url("../../../../assets/image.svg") top left no-repeat;
     background-size: 50px 50px;
@@ -61,7 +74,7 @@
 
 .imageText2{
     position: absolute;
-    top: 48%;
+    top: 59%;
     left: 88%;
     transform: translate(-50%, -50%);
     width: 100%;
@@ -73,7 +86,7 @@
 }
 
 .name-row{
-    padding-top: 13px;
+    padding-top: 5px;
 }
 
 .inputs{
@@ -91,39 +104,39 @@
 }
 
 .description-row{
-    padding-top: 13px;
+    padding-top: 20px;
+}
+
+.ng-value-icon:hover{
+    background-color: rgba(102, 187, 106, 0.1) !important;
 }
 
 .daterangerpicker {
     width: 100%;
-    height: 2rem;
+    outline: none;
+    box-shadow: none;
+    margin: 8px 0;
+    letter-spacing: 1px;
+    font-weight: 300;
+    color: #333;
+    padding-left: 10px;
+    background-color: #fff;
     border-radius: 4px;
-    border: 1px solid #CCC;
-    vertical-align: middle;
-    cursor: default;
+    border: 1px solid #ccc;
+    min-height: 36px;
+    align-items: center;
 }
+
 
 .daterangerpicker .placeholder {
-    padding-left: 10px;
-    padding-right: 10px;
-    color: #999;
-}
-
-.daterangerpicker .cancel {
-    width: 17px;
-    margin: 0 .2rem 0 0;
-    position: relative;
-    color: #999;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    cursor: pointer;
-    z-index: 99;
-}
-
-.daterangerpicker .btn {
-    padding: 0 .5rem 0 0;
+    color: #777;
+    border: none;
+    outline: none;
+    box-shadow: none;
+    font-size: 14px;
+    margin: 8px 0;
+    letter-spacing: 1px;
+    font-weight: 300;
 }
 
 .text{
@@ -159,6 +172,11 @@
 
 .ng-value{
     background-color: white !important;
+}
+
+.align-items-center{
+    width: 100%;
+    padding-top: 30px;
 }
 
 .ng-value-icon{
