--- a/src/main/resources/APachas/src/app/components/events/listEvents/listEvents.component.css
+++ b/src/main/resources/APachas/src/app/components/events/listEvents/listEvents.component.css
@@ -14,6 +14,31 @@
     background: #fff;
 }
 
+.form-check{
+    margin-top: -40px;
+    padding-bottom: 20px;
+}
+
+.message
+{
+    cursor:pointer;
+    text-decoration: none;
+    color: #66bb6a;
+    border: none;
+    outline: none;
+    box-shadow: none;
+    font-size: 12px;
+    letter-spacing: 1px;
+    font-weight: 300;
+    text-transform: uppercase;
+    padding-right: 20px;
+}
+
+.card-text{
+    padding-top: 5px;
+    text-align: right;
+}
+
 .searchDiv input {
     width: 150%;
     padding: 10px;
@@ -29,6 +54,36 @@
     background-position-y: 13px;
     background-position-x: 5px;
     padding-left:30px;
+}
+
+.form-check-input:checked{
+    background-color: #66bb6a;
+}
+
+.form-switch .form-check-input:focus {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2386b7fe'/%3e%3c/svg%3e");
+
+}
+
+.form-switch[_ngcontent-ylm-c80]   .form-check-input[_ngcontent-ylm-c80]:focus {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
+}
+
+.form-check-input:active {
+    filter: none;
+}
+
+.form-check-label{
+    text-decoration: none;
+    border: 1px solid #ffffff;
+    box-shadow: none;
+    font-size: 14px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 300;
+    color: #333;
+    outline: none;
 }
 
 input[type="search"]::-webkit-search-cancel-button{
@@ -86,10 +141,6 @@ input[type="search"]::-webkit-search-cancel-button{
     text-transform: uppercase;
     letter-spacing: 2px;
     padding-top: 25%;
-}
-
-div.paginationDiv {
-    padding-top: 10px;
 }
 
 ul li {
