--- a/src/main/resources/APachas/src/app/components/users/detailUser/detailUser.component.css
+++ b/src/main/resources/APachas/src/app/components/users/detailUser/detailUser.component.css
@@ -150,10 +150,16 @@ ul.paginationUser li:last-child a
 }
 
 div.paginationMutualDiv {
-    padding-top: 10px;
-    height: 150px;
+    padding-top: 20px;
+    height: 170px;
     width: 110%;
     overflow: scroll;
+    cursor:pointer;
+    margin-left: -30px;
+}
+
+div.mutualRight{
+    margin-left: 10px;
 }
 
 .paginationMutualDiv::-webkit-scrollbar{
