--- a/src/main/resources/APachas/src/app/components/events/listEvents/listEvents.component.css
+++ b/src/main/resources/APachas/src/app/components/events/listEvents/listEvents.component.css
@@ -7,16 +7,24 @@
     font-family: 'Poppins', sans-serif;
 }
 
+.text{
+    text-decoration: none;
+    border: 1px solid #ffffff;
+    box-shadow: none;
+    font-size: 14px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 300;
+    color: #333;
+    outline: none;
+}
+
 .searchDiv
 {
     padding-top: 50px;
     padding-bottom: 30px;
     background: #fff;
-}
-
-.form-check{
-    margin-top: -40px;
-    padding-bottom: 20px;
 }
 
 .message
@@ -56,24 +64,7 @@
     padding-left:30px;
 }
 
-.form-check-input:checked{
-    background-color: #66bb6a;
-}
-
-.form-switch .form-check-input:focus {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2386b7fe'/%3e%3c/svg%3e");
-
-}
-
-.form-switch[_ngcontent-ylm-c80]   .form-check-input[_ngcontent-ylm-c80]:focus {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
-}
-
-.form-check-input:active {
-    filter: none;
-}
-
-.form-check-label{
+.filterSearch{
     text-decoration: none;
     border: 1px solid #ffffff;
     box-shadow: none;
@@ -84,6 +75,16 @@
     font-weight: 300;
     color: #333;
     outline: none;
+    width: 100%;
+    cursor: pointer;
+}
+
+.dropdown-menu{
+    width: 200%;
+}
+
+.checkFilter{
+    background: rgba(102, 187, 106, 0.12);
 }
 
 input[type="search"]::-webkit-search-cancel-button{
@@ -101,15 +102,45 @@ input[type="search"]::-webkit-search-cancel-button{
 
 .button
 {
-    cursor:pointer;
+    width: 100%;
+    padding: 10px;
     border: none;
-    width: 40px;
-    height: 40px;
-    background: url("../../../../assets/add.svg") top left no-repeat;
-    background-position: center;
-    background-size: 40px 40px;
+    outline: none;
+    box-shadow: none;
+    max-width: 180px;
+    background: #66bb6a;
+    color: #fff;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    transition: 0.5s;
+    text-transform: uppercase;
+    margin-left: -80px;
+}
+.tag {
+    padding: 10px;
+    border: none;
+    outline: none;
+    box-shadow: none;
+    max-width: 120px;
+    background: #fff;
+    color: #66bb6a;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    transition: 0.5s;
+    text-transform: uppercase;
+    border: #66bb6a;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 25px;
 }
 
+.dropAlign{
+    text-align: left;
+    margin-left: -20px;
+}
 .divAligment{
     text-align: center !important;
 }
@@ -126,6 +157,57 @@ input[type="search"]::-webkit-search-cancel-button{
 .color:hover{
     background: rgba(102, 187, 106, 0.12);
     cursor:pointer;
+}
+
+ul.pagination{
+    display: flex;
+    padding-left: 0;
+    list-style: none;
+    width: 100%;
+}
+
+ul.pagination li {
+    display: inline;
+    border: none;
+}
+
+ul.pagination li a {
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+    border: 1px solid #ffffff;
+    box-shadow: none;
+    font-size: 14px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 300;
+    background: #f5f5f5;
+    color: #333;
+    outline: none;
+}
+
+ul.pagination li:first-child a
+{
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    cursor:pointer;
+
+}
+
+ul.pagination li:last-child a
+{
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    cursor:pointer;
+}
+
+.previous{
+    float: left;
+}
+
+.next{
+    float: right;
 }
 
 .image {
