--- a/src/main/resources/APachas/src/app/components/events/listEvents/listEvents.component.html
+++ b/src/main/resources/APachas/src/app/components/events/listEvents/listEvents.component.html
@@ -1,56 +1,72 @@
-
-<div class="searchDiv row">
-    <div class="col-xxl-7 col-xl-7 col-lg-7 col-md-8 col-sm-8 col-8">
-        <form ngNativeValidate (input)="searchInput()" #searchEventsForm="ngForm">
-            <input type="search" id="events_eventName" name="eventName" placeholder="Buscar por nombre de evento"
-                       [(ngModel)]="eventName" required #eventNameForm="ngModel" aria-label="Search">
-        </form>
+<section>
+    <div class="searchDiv row">
+        <div class="col-xxl-7 col-xl-7 col-lg-7 col-md-8 col-sm-8 col-8">
+            <form ngNativeValidate (input)="searchInput()" #searchEventsForm="ngForm">
+                <input type="search" id="events_eventName" name="eventName" placeholder="Buscar por nombre de evento"
+                           [(ngModel)]="eventName" required #eventNameForm="ngModel" aria-label="Search">
+            </form>
+        </div>
+        <div class="col-xxl-1 col-xl-1 col-lg-1 col-md-1 col-sm-1 col-1">
+            <div class="dropdown dropAlign">
+                <a class="btn btn-neutral dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="zmdi zmdi-more-vert iSize"></i>
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <li>
+                        <p class="filterSearch" [ngClass]="checkFilter()" (click)="toggleCheck()">Eventos finalizados</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-xxl-1 col-xl-1 col-lg-1 col-md-1 col-sm-1 col-1 createDiv">
+            <button type="button" class="button" data-bs-toggle="modal" data-bs-target="#createEventModal" (click)="setEvent();">Añadir</button>
+        </div>
     </div>
-    <div class="col-xxl-1 col-xl-1 col-lg-1 col-md-1 col-sm-1 col-1 createDiv">
-        <button type="button" class="button" data-bs-toggle="modal" data-bs-target="#createEventModal" (click)="setEvent();"></button>
+    <div *ngIf="checked" class="row">
+        <p class="tag">Finalizados</p>
     </div>
-</div>
 
-<div class="form-check form-switch">
-    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" [checked]="this.checked" (click)="toggleCheck()">
-    <label class="form-check-label" for="flexSwitchCheckDefault">Eventos finalizados</label>
-</div>
+    <app-createEvent (eventSave)="getEvents();" [event]="selectedEvent"></app-createEvent>
+    <app-detailEvent (eventDelete)="getEvents();" (eventDetail)="setSelectedEvent($event)" (eventMessage)="getEvents()" [event]="selectedEvent" [previous] = "getPrevious()" [next] = "getNext()" [status] ="selectedStatus"></app-detailEvent>
 
-<app-createEvent (eventSave)="getEvents();" [event]="selectedEvent"></app-createEvent>
-<app-detailEvent (eventDelete)="getEvents();" (eventDetail)="setSelectedEvent($event)" (eventMessage)="getEvents()" [event]="selectedEvent" [previous] = "getPrevious()" [next] = "getNext()" [status] ="selectedStatus"></app-detailEvent>
-
-<div class="row row-cols-1 row-cols-xxl-3 row-cols-xl-3 row-cols-lg-2 row-cols-md-2 row-cols-sm-1 g-4 divAligment">
-    <div *ngFor="let event of events;let i=index">
-        <div class="col">
-            <div class="card mb-3 color" id="detailEventCard" data-bs-toggle="modal" data-bs-target="#detailEventModal"
-                 (click)="selectEvent(i)">
-                <div class="row g-0">
-                    <div class="col-xxl-5 col-xl-12 col-lg-5 col-md-12 col-sm-5 divAligment">
-                        <ng-container *ngIf="event.eventPhoto != null; else imagesDiv">
-                            <img class="image" [src]="images[event.eventId]">
-                        </ng-container>
-                        <ng-template #imagesDiv>
-                            <img class="image" [src]="defaultImage">
-                        </ng-template>
-                    </div>
-                    <div class="col-xxl-7 col-xl-12 col-lg-7 col-md-12 col-sm-7 divAligment">
-                        <div class="card-body-xxl-7 card-body-xl-12 card-body-lg-7 card-body-md-12 card-body-sm-7 divAligment">
-                            <h5 class="title">{{event.eventName}}</h5>
-                            <p class="card-text">
-                                <a class="message">{{status[event.eventId]}}</a>
-                            </p>
+    <div class="row row-cols-1 row-cols-xxl-3 row-cols-xl-3 row-cols-lg-2 row-cols-md-2 row-cols-sm-1 g-4 divAligment">
+        <ng-container *ngIf="events.length != 0; else eventsDiv">
+            <div *ngFor="let event of events;let i=index">
+                <div class="col">
+                    <div class="card mb-3 color" id="detailEventCard" data-bs-toggle="modal" data-bs-target="#detailEventModal"
+                         (click)="selectEvent(i)">
+                        <div class="row g-0">
+                            <div class="col-xxl-5 col-xl-12 col-lg-5 col-md-12 col-sm-5 divAligment">
+                                <ng-container *ngIf="event.eventPhoto != null; else imagesDiv">
+                                    <img class="image" [src]="images[event.eventId]">
+                                </ng-container>
+                                <ng-template #imagesDiv>
+                                    <img class="image" [src]="defaultImage">
+                                </ng-template>
+                            </div>
+                            <div class="col-xxl-7 col-xl-12 col-lg-7 col-md-12 col-sm-7 divAligment">
+                                <div class="card-body-xxl-7 card-body-xl-12 card-body-lg-7 card-body-md-12 card-body-sm-7 divAligment">
+                                    <h5 class="title">{{event.eventName}}</h5>
+                                    <p class="card-text">
+                                        <a class="message">{{status[event.eventId]}}</a>
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </ng-container>
+        <ng-template #eventsDiv>
+            <p class="text">NO EXISTEN EVENTOS</p>
+        </ng-template>
     </div>
-</div>
-<div class="paginationDiv">
-    <ul class="row pagination">
-        <li class="page-item" [ngClass]="previousClass" *ngIf="page!=0"><a class="page-link previous" (click)="setPage(-1)">Anterior</a>
-        </li>
-        <li class="page-item" [ngClass]="nextClass" *ngIf="page+1<totalPage"><a class="page-link next" (click)="setPage(1)">Siguiente</a>
-        </li>
-    </ul>
-</div>
+    <div class="paginationDiv">
+        <ul class="row pagination">
+            <li class="page-item" [ngClass]="previous" *ngIf="page!=0"><a class="page-link previous" (click)="setPage(-1)">Anterior</a>
+            </li>
+            <li class="page-item" [ngClass]="next" *ngIf="page+1<totalPage"><a class="page-link next" (click)="setPage(1)">Siguiente</a>
+            </li>
+        </ul>
+    </div>
+</section>
