--- a/src/main/resources/APachas/src/app/components/groups/detailGroup/detailGroup.component.css
+++ b/src/main/resources/APachas/src/app/components/groups/detailGroup/detailGroup.component.css
@@ -18,7 +18,6 @@
 }
 
 .row{
-    /*align-content: center;*/
     padding-bottom: 10px;
 }
 
@@ -59,6 +58,25 @@
     outline: none;
 }
 
+.drop{
+    margin-top: 5px;
+    margin-left: -5px;
+
+}
+
+.buttonText{
+    text-decoration: none;
+    border: 1px solid #ffffff;
+    box-shadow: none;
+    font-size: 14px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-align: left;
+    font-weight: 300;
+    color: #333;
+    outline: none;
+}
+
 div.paginationMemberDiv {
     padding-top: 10px;
     height: 290px;
@@ -91,14 +109,6 @@ div.paginationMemberDiv {
 
 .paginationMemberDiv::-webkit-scrollbar-track{
     border-radius: 10px;
-}
-
-.paginationMember{
-    align-items: center;
-}
-
-.previousMember{
-    float: left;
 }
 
 .imageMember {
@@ -232,6 +242,10 @@ ul.paginationUserGroup li:last-child a
 
 .nextUserGroup{
     float: right;
+}
+
+.previousUserGroup{
+    float: left;
 }
 
 .closeButton{
