--- a/src/main/resources/APachas/src/app/components/groups/listGroups/listGroups.component.css
+++ b/src/main/resources/APachas/src/app/components/groups/listGroups/listGroups.component.css
@@ -14,6 +14,19 @@
     background: #fff;
 }
 
+.text{
+    text-decoration: none;
+    border: 1px solid #ffffff;
+    box-shadow: none;
+    font-size: 14px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 300;
+    color: #333;
+    outline: none;
+}
+
 .searchDiv input {
     width: 150%;
     padding: 10px;
@@ -46,13 +59,20 @@ input[type="search"]::-webkit-search-cancel-button{
 
 .button
 {
-    cursor:pointer;
+    width: 100%;
+    padding: 10px;
     border: none;
-    width: 40px;
-    height: 40px;
-    background: url("../../../../assets/add.svg") top left no-repeat;
-    background-position: center;
-    background-size: 40px 40px;
+    outline: none;
+    box-shadow: none;
+    max-width: 180px;
+    background: #66bb6a;
+    color: #fff;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    transition: 0.5s;
+    text-transform: uppercase;
 }
 
 .divAligment{
